# Curtail

./: .gitignore  CHANGELOG.md  Curtail.doap  Makefile  README.md  com.github.ImCompressor.json  com.github.huluti.Curtail.json  com.github.huluti.ImCompressor.json  meson.build  oxipng-sources.json  pyproject.toml  python3-scour.json  scour-sources.json  svgo-sources.json
.github/: FUNDING.yml
.github/workflows/: flatpak.yml  pythonapp.yml
data/: com.github.ImCompressor.appdata.xml.in  com.github.ImCompressor.desktop.in  com.github.ImCompressor.gschema.xml  com.github.huluti.Curtail.appdata.xml.in  com.github.huluti.Curtail.desktop.in  com.github.huluti.Curtail.gschema.xml  com.github.huluti.Curtail.service.in  com.github.huluti.ImCompressor.appdata.xml.in  com.github.huluti.ImCompressor.desktop.in  com.github.huluti.ImCompressor.gschema.xml  curtail.gresource.xml  meson.build
data/icons/: meson.build
data/ui/: help_overlay.ui  menu.ui  preferences.blp  preferences.ui  result-item-row.blp  shortcuts-dialog.blp  shortcuts-dialog.ui  window.blp  window.ui
debian/: changelog  control  copyright  rules
debian/upstream/: metadata
docs/: DEVELOPMENT.md
po/: LINGUAS  POTFILES  POTFILES.in  az.po  bg.po  ca.po  cs.po  curtail.pot  de.po  de_DE.po  el.po  en_GB.po  eo.po  es.po  es_ES.po  eu.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  imcompressor.pot  it.po  ka.po  kk.po  ko.po  kw.po  meson.build  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+7 more)
src/: apply.py  compression_manager.py  compressor.py  curtail.gresource.xml  curtail.in  imcompressor.gresource.xml  imcompressor.in  main.py  meson.build  preferences.py  result_item.py  result_item_manager.py  result_item_row.py  resultitem.py  settings_manager.py  tools.py  window.py  window.ui
src/compressors/: jpeg_compressor.py  png_compressor.py  svg_compressor.py  webp_compressor.py
src/ui/: apply.ui  help_overlay.ui  menu.ui  preferences.ui  window.ui
